ros_dev_ws/log/build_2021-02-22_16-00-13/teensy/stderr.log
  File "/home/pop/Documents/wqdrone/ros_dev_ws/install/teensy/lib/python3.8/site-packages/teensy/teensy_pub.py", line 25
    def gps_parse(self,self.line):
                           ^
SyntaxError: invalid syntax

